--- a/style.css
+++ b/style.css
@@ -315,11 +315,13 @@ p {
   border-radius: 4px;
   margin-bottom: 30px;
 }
+
 .features-list-item-icon {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .features-list-item:not(:last-child) {
   margin-right: 30px;
 }
@@ -419,9 +421,6 @@ p {
 }
 
 .social-list-item-link {
-  /* width: 44px;
-  height: 44px;*/
-  /*margin-right: 10px;*/
   fill: #afb1b8;
 }
 
@@ -432,14 +431,6 @@ p {
 .social-list-item:nth-child(4n) {
   margin-right: 0;
 }
-
-/*.social-list-item-link {
-  display: block;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  padding: 0;
-}*/
 
 .social-list-item-link:hover,
 .social-list-item-link:focus {
@@ -457,13 +448,20 @@ p {
 .subscribe-list .social-list-item:focus {
   background-color: var(--accent-color);
 }
-
+.subscribe-list .social-list-item .social-list-item-link {
+  fill: var(--primary-white-color);
+}
 .clients {
   display: flex;
   align-items: center;
 }
 
 .clients-item {
+  width: 170px;
+  height: 90px;
+  border: 1px solid #afb1b8;
+  box-sizing: border-box;
+  border-radius: 4px;
   margin-right: 30px;
 }
 
@@ -479,9 +477,20 @@ p {
   display: flex;
   width: 170px;
   height: 90px;
-  border: 1px solid #afb1b8;
-  box-sizing: border-box;
-  border-radius: 4px;
+  justify-content: center;
+  align-items: center;
+}
+
+/*.clients-item-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}*/
+
+.clients-item-link {
+  display: flex;
+  width: 170px;
+  height: 90px;
   justify-content: center;
   align-items: center;
 }
