--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
   --footer-background: #2f303a;
   --logo-color: #000000;
   --secondary-white-color: #f5f4fa;
+  --border-color: #afb1b8;
 }
 html {
   box-sizing: border-box;
@@ -56,6 +57,7 @@ p {
 .section {
   padding-bottom: 94px;
 }
+
 .container {
   width: 1200px;
   padding-left: 15px;
@@ -93,7 +95,7 @@ p {
   padding-top: 32px;
 }
 
-.container .portfolio {
+.portfolio .container {
   padding-bottom: 93px;
 }
 
@@ -110,6 +112,7 @@ p {
 
 .contacts-list .link {
   display: flex;
+  align-items: center;
   margin-right: 10px;
 }
 
@@ -179,6 +182,7 @@ p {
   text-align: center;
   margin-right: auto;
   margin-left: auto;
+  padding-bottom: 94px;
 }
 .section-features {
   padding: 0;
@@ -293,6 +297,11 @@ p {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
 }
+
+.image {
+  position: relative;
+  display: flex;
+}
 .features-list .title {
   padding-bottom: 10px;
   font-weight: bold;
@@ -313,11 +322,13 @@ p {
   align-items: center;
 }
 
-.features-list-item-link {
-  display: flex;
+.features-list-item {
   width: 270px;
   height: 120px;
-  background-color: #f5f4fa;
+}
+.features-list-item-link {
+  display: flex;
+  background-color: var(--secondary-white-color);
   justify-content: center;
   align-items: center;
   border-radius: 4px;
@@ -357,6 +368,10 @@ p {
 }
 
 .activities-list-title {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+
   display: flex;
   width: 370px;
   height: 70px;
@@ -368,9 +383,10 @@ p {
   display: flex;
   align-items: center;
 }
+
 .team {
   padding-top: 94px;
-  background-color: #f5f4fa;
+  background-color: var(--secondary-white-color);
 }
 
 .team-list-item-image {
@@ -419,17 +435,17 @@ p {
 }
 
 .social-list-item {
+  margin-right: 10px;
+}
+
+.social-list-item-link {
+  fill: #afb1b8;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
   width: 44px;
   height: 44px;
-  margin-right: 10px;
-}
-
-.social-list-item-link {
-  fill: #afb1b8;
 }
 
 .social-list-item:hover,
@@ -486,21 +502,30 @@ p {
 }
 
 .filter-groups .button {
+  border-radius: 4px;
+  border: none;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.6;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
-  background-color: #f5f4fa;
+  background-color: var(--secondary-white-color);
 }
 
 .filter-groups .button:hover,
 .filter-groups .button:focus {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 3px 1px rgba(0, 0, 0, 0.1);
 }
 
+.filter-groups .button:active {
+  background: var(--accent-color);
+  border: none;
+  border-radius: 4px;
+}
 .projects-flex-element {
   border: 1px solid #eeeeee;
   box-sizing: border-box;
@@ -509,7 +534,7 @@ p {
   width: calc((100% - 60px) / 3);
   margin-right: 30px;
   margin-bottom: 30px;
-  /* overflow: hidden;*/
+  overflow: hidden;
 }
 .projects-flex-element:hover,
 .projects-flex-element:focus {
