--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
 
 .link {
   text-decoration: none;
-  /* display: flex;*/
+  display: block;
   margin: 0;
   padding: 0;
 }
@@ -91,8 +91,7 @@ p {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-bottom: 32px;
-  padding-top: 32px;
+  min-height: 80px;
 }
 
 .portfolio .container {
@@ -140,23 +139,38 @@ p {
   margin-right: 50px;
 }
 
+.site-nav-list-item-link::after {
+  display: block;
+  width: 100%;
+  height: 4px;
+  left: 454px;
+  top: 76px;
+  content: "";
+
+  background-color: var(--accent-color);
+  border-radius: 2px;
+  margin-top: 28px;
+}
+
 .site-nav {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
 }
+
 .site-nav-list .link {
-  padding-bottom: 32px;
-  padding-top: 32px;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--title-text-color);
   list-style: none;
 }
+
 .site-nav-list .link:hover,
 .site-nav-list .link:focus {
   color: var(--accent-color);
 }
+
 .contacts-list .link {
   font-weight: 500;
   font-size: 14px;
@@ -263,6 +277,8 @@ p {
     ),
     url(./images/Header-img.jpg);
   background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   margin-left: auto;
   margin-right: auto;
 }
@@ -299,6 +315,7 @@ p {
 .image {
   position: relative;
   display: flex;
+  margin-right: 30px;
 }
 
 .features-list .title {
@@ -321,13 +338,13 @@ p {
   align-items: center;
 }
 
-/*.features-list-item {
+.features-list-item {
   width: 270px;
-  height: 120px;
-}*/
+}
+
 .features-list-item-link {
   display: flex;
-  width: 270px;
+  width: 100%;
   height: 120px;
   background-color: var(--secondary-white-color);
   justify-content: center;
@@ -364,9 +381,9 @@ p {
   background-color: var(--secondary-background-color);
   color: var(--primary-white-color);
 }
-.activitties-list-item {
+/*.activitties-list-item {
   margin-right: 30px;
-}
+}*/
 
 .activities-list-title {
   position: absolute;
@@ -374,7 +391,7 @@ p {
   left: 0;
 
   display: flex;
-  width: 370px;
+  width: 100%;
   height: 70px;
   justify-content: center;
   align-items: center;
