--- a/style.css
+++ b/style.css
@@ -83,15 +83,22 @@ p {
   padding-bottom: 94px;
 }
 
+.header {
+  display: block;
+}
+
 .header-portfolio {
   padding-bottom: 93px;
 }
 
 .header .container {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   min-height: 80px;
+  padding-bottom: 0;
+  padding-top: 0;
 }
 
 .portfolio .container {
@@ -133,6 +140,12 @@ p {
 }
 .site-nav-list {
   display: flex;
+  flex-wrap: wrap;
+}
+
+.site-nav-list-item {
+  position: relative;
+  display: flex;
 }
 
 .site-nav-list-item:not(:last-child) {
@@ -141,17 +154,21 @@ p {
 
 .site-nav-list-item-link::after {
   display: block;
+  position: absolute;
   width: 100%;
   height: 4px;
-  left: 454px;
-  top: 76px;
   content: "";
 
   background-color: var(--accent-color);
   border-radius: 2px;
   margin-top: 28px;
+  opacity: 0;
 }
 
+.site-nav-list-item-link:hover::after,
+.site-nav-list-item-link:focus::after {
+  opacity: 1;
+}
 .site-nav {
   display: flex;
   align-items: center;
