--- a/style.css
+++ b/style.css
@@ -354,6 +354,38 @@ p {
   margin-right: 30px;
 }
 
+.projects-flex-element-img {
+  position: relative;
+  overflow: hidden;
+}
+
+.projects-flex-element-image:hover,
+.projects-flex-element-image:focus {
+  opacity: 1;
+}
+
+.projects-description {
+  position: absolute;
+  transform: translateY(101%);
+  left: 0;
+  top: 0;
+  opacity: 0;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+  margin: 0;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-bottom: 63px;
+  padding-top: 63px;
+  height: 100%;
+  width: 100%;
+}
 .features-list .title {
   padding-bottom: 10px;
   font-weight: bold;
