--- a/style.css
+++ b/style.css
@@ -84,13 +84,12 @@ p {
 }
 
 .header {
-  display: block;
-  border-bottom: 1px solid #ececec;
+  line-height: normal;
 }
 
-/*.header-portfolio {
-  padding-bottom: 93px;
-}*/
+.header-portfolio {
+  border-bottom: 1px solid #ececec;
+}
 
 .header .container {
   display: flex;
@@ -141,19 +140,26 @@ p {
 }
 .site-nav-list {
   display: flex;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap;*/
 }
 
-.site-nav-list-item {
+.site-nav-list-item-link {
   position: relative;
-  display: flex;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  color: var(--title-text-color);
+  font-weight: 500;
+  letter-spacing: 0.02em;
 }
 
 .site-nav-list-item:not(:last-child) {
   margin-right: 50px;
 }
 
-.site-nav-list-item-link::after {
+.site-nav-list-item-link {
+  color: var(--accent-color);
+}
+.active-list-item::after {
   display: block;
   position: absolute;
   width: 100%;
@@ -163,15 +169,15 @@ p {
   background-color: var(--accent-color);
   border-radius: 2px;
   margin-top: 28px;
-  opacity: 0;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  /* opacity: 0;*/
 }
 
-/*.site-nav-list-item-link:hover::after,*/
-.site-nav-list-item .site-nav-list-item-link:active:after {
+/*.site-nav-list-item-link:hover::after,
+.site-nav-list-item .site-nav-list-item-link:active::after {
   background-color: var(--accent-color);
   opacity: 1;
 }
+*/
 .site-nav {
   display: flex;
   align-items: center;
@@ -187,14 +193,11 @@ p {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.site-nav-list-item /*.link*/:hover,
-.site-nav-list-item /*.link*/:focus {
+.site-nav-list-item-link:hover,
+.site-nav-list-item-link:focus {
   color: var(--accent-color);
 }
 
-/*.active-list-item {
-  color: var(--accent-color);
-}*/
 .contacts-list .link {
   font-weight: 500;
   font-size: 14px;
@@ -359,11 +362,6 @@ p {
   overflow: hidden;
 }
 
-.projects-flex-element-image:hover,
-.projects-flex-element-image:focus {
-  opacity: 1;
-}
-
 .projects-description {
   position: absolute;
   transform: translateY(101%);
@@ -386,6 +384,12 @@ p {
   height: 100%;
   width: 100%;
 }
+.projects-link:hover .projects-description,
+.projects-link:focus .projects-description {
+  transform: translateY(0);
+  opacity: 1;
+}
+
 .features-list .title {
   padding-bottom: 10px;
   font-weight: bold;
@@ -572,9 +576,6 @@ p {
 .clients-item {
   width: 170px;
   height: 90px;
-  border: 1px solid #afb1b8;
-  box-sizing: border-box;
-  border-radius: 4px;
   margin-right: 30px;
 }
 
@@ -592,6 +593,22 @@ p {
   height: 90px;
   justify-content: center;
   align-items: center;
+  border: solid #afb1b8 1px;
+  border-radius: 4px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.clients-link:hover,
+.clients-link:focus {
+  border: solid #2196f3 1px;
+}
+.clients-link:hover .clients-item-icon,
+.clients-link:focus .clients-item-icon {
+  fill: var(--accent-color);
+}
+.clients-item-icon {
+  fill: #afb1b8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-groups .button:active {
@@ -617,8 +634,9 @@ p {
   box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
     0px 1px 1px rgba(0, 0, 0, 0.12);
 }
+
 .card-content {
-  display: flex;
+  display: block;
   background: #ffffff;
   padding-left: 24px;
   padding-right: 24px;
@@ -655,13 +673,6 @@ p {
   line-height: 1.9;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
-}
-
-.projects-description {
-  font-size: 18px;
-  line-height: 1.56;
-  letter-spacing: 0.03em;
-  color: var(--primary-white-color);
 }
 
 .footer-section .container {
